--- a/universal/pom.xml
+++ b/universal/pom.xml
@@ -152,4 +152,90 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	<profiles>
+		<profile>
+			<id>generate</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>${project.groupId}</groupId>
+						<artifactId>loader-plugin</artifactId>
+						<configuration>
+							<loader>
+								<contexts>${db.context}</contexts>
+								<dbaServer>${dba.db.server}</dbaServer>
+								<dbaPort>${dba.db.port}</dbaPort>
+								<dbaUsername>${dba.db.login}</dbaUsername>
+								<dbaPassword>${dba.db.password}</dbaPassword>
+
+								<coreServer>${db.server}</coreServer>
+								<corePort>${db.port}</corePort>
+								<corePassword>${db.password}</corePassword>
+								<coreDb>${db}</coreDb>
+								<coreUsername>testme</coreUsername>
+
+								<dropDatabase>true</dropDatabase>
+							</loader>
+						</configuration>
+						<executions>
+							<execution>
+								<phase>compile</phase>
+								<goals>
+									<goal>load</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>com.chiralbehaviors.CoRE</groupId>
+						<artifactId>workspace-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>load-dsl</id>
+								<phase>compile</phase>
+								<goals>
+									<goal>load-dsl</goal>
+								</goals>
+								<configuration>
+									<database>
+										<coreServer>${db.server}</coreServer>
+										<corePort>${db.port}</corePort>
+										<coreDb>${db}</coreDb>
+										<coreUsername>${user}</coreUsername>
+										<corePassword>${db.password}</corePassword>
+									</database>
+									<resources>
+										<resource>src/main/resources/com/chiralbehaviors/CoRE/universal/single-page.1.wsp</resource>
+									</resources>
+								</configuration>
+							</execution>
+							<execution>
+								<id>generate-snapshots</id>
+								<phase>compile</phase>
+								<goals>
+									<goal>generate-snapshot</goal>
+								</goals>
+								<configuration>
+									<database>
+										<coreServer>${db.server}</coreServer>
+										<corePort>${db.port}</corePort>
+										<coreUsername>${user}</coreUsername>
+										<coreDb>${db}</coreDb>
+										<corePassword>${db.password}</corePassword>
+									</database>
+									<exports>
+										<export>
+											<iri>uri:http://ultrastructure.me/ontology/com.chiralbehaviors/uaas/single-page</iri>
+											<output>src/main/resources/com/chiralbehaviors/CoRE/universal/single-page.1.json</output>
+										</export>
+									</exports>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+	</profiles>
 </project>
