--- a/pom.xml
+++ b/pom.xml
@@ -741,6 +741,7 @@
 							<excludes>
 								<exclude>graphql/annotations/**/*</exclude>
 								<exclude>com/chiralbehaviors/CoRE/jooq/**/*</exclude>
+								<exclude>com/chiralbehaviors/CoRE/workspace/dsl/grammar/**/*</exclude>
 								<exclude>**/HelpMojo.*</exclude>
 								<exclude>**/Universal.*</exclude>
 								<exclude>**/English.*</exclude>
