--- a/pom.xml
+++ b/pom.xml
@@ -736,7 +736,7 @@
 					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
-						<version>0.7.10-SNAPSHOT</version>
+						<version>0.7.10</version>
 						<configuration>
 							<excludes>
 								<exclude>graphql/annotations/**/*</exclude>
