--- a/universal/pom.xml
+++ b/universal/pom.xml
@@ -16,10 +16,10 @@
 	</properties>
 
 	<dependencies>
-        <dependency>
-            <groupId>org.antlr</groupId>
-            <artifactId>antlr4-runtime</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr4-runtime</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.chiralbehaviors.layout</groupId>
 			<artifactId>kramer-ql</artifactId>
@@ -95,6 +95,7 @@
 				<artifactId>antlr4-maven-plugin</artifactId>
 				<executions>
 					<execution>
+						<phase>generate-sources</phase>
 						<goals>
 							<goal>antlr4</goal>
 						</goals>
