--- a/phantasm-plugin/pom.xml
+++ b/phantasm-plugin/pom.xml
@@ -38,6 +38,10 @@
 			<artifactId>thing-ontology</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
