--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
 		<module>universal</module>
 		<module>postgresql-testing</module>
 		<module>mind-palace</module>
+		<module>mind-palace-bedrock</module>
 	</modules>
 
 	<dependencyManagement>
@@ -484,6 +485,26 @@
 				<groupId>org.processing</groupId>
 				<artifactId>core</artifactId>
 				<version>3.2.3</version>
+			</dependency>
+			<dependency>
+				<groupId>com.jrc03c</groupId>
+				<artifactId>queasycam</artifactId>
+				<version>1.0.0</version>
+			</dependency>
+			<dependency>
+				<groupId>com.chiralbehaviors.CoRE</groupId>
+				<artifactId>mind-palace-bedrock</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jogamp.jogl</groupId>
+				<artifactId>jogl-all-main</artifactId>
+				<version>2.3.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jogamp.gluegen</groupId>
+				<artifactId>gluegen-rt-main</artifactId>
+				<version>2.3.2</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
