--- a/pom.xml
+++ b/pom.xml
@@ -387,7 +387,7 @@
 			<dependency>
 				<groupId>com.graphql-java</groupId>
 				<artifactId>graphql-java</artifactId>
-				<version>2.4.0</version>
+				<version>2.3.0</version>
 			</dependency>
 			<dependency>
 				<groupId>com.graphql-java</groupId>
@@ -438,6 +438,11 @@
 				<groupId>com.loginbox.heroku</groupId>
 				<artifactId>dropwizard-heroku-db</artifactId>
 				<version>1.0.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.osgi</groupId>
+				<artifactId>org.osgi.service.component.annotations</artifactId>
+				<version>1.3.0</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -500,7 +505,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.6.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -509,7 +514,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.2.1</version>
+				<version>3.0.1</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -526,11 +531,6 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
-				<plugin>
-					<groupId>com.webguys</groupId>
-					<artifactId>string-template-maven-plugin</artifactId>
-					<version>1.1</version>
-				</plugin>
 				<plugin>
 					<groupId>org.jooq</groupId>
 					<artifactId>jooq-codegen-maven</artifactId>
