--- a/pom.xml
+++ b/pom.xml
@@ -293,6 +293,11 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>loader-plugin</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.antlr</groupId>
 				<artifactId>ST4</artifactId>
 				<version>4.0.8</version>
