--- a/pom.xml
+++ b/pom.xml
@@ -564,6 +564,7 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<configuration>
+						<useSystemClassLoader>false</useSystemClassLoader>
 						<enableAssertions>true</enableAssertions>
 					</configuration>
 					<version>2.20</version>
