--- a/phantasm-at-rest/pom.xml
+++ b/phantasm-at-rest/pom.xml
@@ -15,11 +15,11 @@
 	</properties>
 
 	<dependencies>
-        <dependency>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils</artifactId>
-            <scope>compile</scope>
-        </dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.chiralbehaviors</groupId>
 			<artifactId>jbcrypt</artifactId>
@@ -27,7 +27,7 @@
 		<dependency>
 			<groupId>com.chiralbehaviors.CoRE</groupId>
 			<artifactId>animations</artifactId>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>javax.ws.rs-api</artifactId>
@@ -76,6 +76,10 @@
 		</dependency>
 		<dependency>
 			<groupId>com.graphql-java</groupId>
+			<artifactId>graphql-java</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.graphql-java</groupId>
 			<artifactId>graphql-java-annotations</artifactId>
 		</dependency>
 		<dependency>
@@ -88,10 +92,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-        <dependency>
-            <groupId>com.chiralbehaviors.CoRE</groupId>
-            <artifactId>loader</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>com.chiralbehaviors.CoRE</groupId>
+			<artifactId>loader</artifactId>
+		</dependency>
 
 		<!-- test dependencies -->
 		<dependency>
