--- a/model/pom.xml
+++ b/model/pom.xml
@@ -87,6 +87,10 @@
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-impl</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.activation</groupId>
+			<artifactId>javax.activation</artifactId> 
+		</dependency>
 
 
 		<dependency>
