--- a/pom.xml
+++ b/pom.xml
@@ -501,6 +501,11 @@
 				<artifactId>lombok</artifactId>
 				<version>1.16.20</version>
 			</dependency>
+			<dependency>
+				<groupId>com.sun.activation</groupId>
+				<artifactId>javax.activation</artifactId>
+				<version>1.2.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
