add reporting dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -811,6 +811,23 @@
 						<configuration>
 							<repoToken>${coveralls.repo.token}</repoToken>
 						</configuration>
+						<dependencies>
+							<dependency>
+								<groupId>javax.xml.bind</groupId>
+								<artifactId>jaxb-api</artifactId>
+								<version>${jaxb.version}</version>
+							</dependency>
+							<dependency>
+								<groupId>com.sun.xml.bind</groupId>
+								<artifactId>jaxb-core</artifactId>
+								<version>${jaxb.version}</version>
+							</dependency>
+							<dependency>
+								<groupId>com.sun.xml.bind</groupId>
+								<artifactId>jaxb-impl</artifactId>
+								<version>${jaxb.version}</version>
+							</dependency>
+						</dependencies>
 					</plugin>
 				</plugins>
 			</build>
