--- a/model/pom.xml
+++ b/model/pom.xml
@@ -239,7 +239,7 @@
 					</jdbc>
 					<generator>
 						<database>
-							<name>org.jooq.util.postgres.PostgresDatabase</name>
+							<name>org.jooq.meta.postgres.PostgresDatabase</name>
 							<includes>.*</includes>
 							<excludes></excludes>
 							<inputSchema>ruleform</inputSchema>
