--- a/pom.xml
+++ b/pom.xml
@@ -39,14 +39,15 @@
 		<db.context>local</db.context>
 
 		<antlr.version>4.7</antlr.version>
-		<dropwizard.version>1.1.4</dropwizard.version>
+		<dropwizard.version>1.3.4</dropwizard.version>
+		<metrics.version>4.0.2</metrics.version>
 		<postgresql.driver.version>42.2.2</postgresql.driver.version>
-		<jackson.version>2.9.4</jackson.version>
+		<jackson.version>2.9.6</jackson.version>
 		<jacoco.version>0.7.5.201505241946</jacoco.version>
-		<jooq.version>3.10.6</jooq.version>
+		<jooq.version>3.11.1</jooq.version>
 		<jaxb.version>2.2.11</jaxb.version>
 		<liquibase.version>3.5.3</liquibase.version>
-		<slf4j.version>1.7.24</slf4j.version>
+		<slf4j.version>1.7.25</slf4j.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -111,7 +112,7 @@
 			<dependency>
 				<groupId>com.bendb.dropwizard</groupId>
 				<artifactId>dropwizard-jooq</artifactId>
-				<version>1.0.0-2</version>
+				<version>1.2.0-0</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.jooq</groupId>
@@ -138,16 +139,6 @@
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-dbcp2</artifactId>
 				<version>2.0</version>
-			</dependency>
-			<dependency>
-				<groupId>io.dropwizard.metrics</groupId>
-				<artifactId>metrics-healthchecks</artifactId>
-				<version>3.2.2</version>
-			</dependency>
-			<dependency>
-				<groupId>io.dropwizard.metrics</groupId>
-				<artifactId>metrics-annotation</artifactId>
-				<version>3.2.2</version>
 			</dependency>
 			<dependency>
 				<groupId>io.dropwizard</groupId>
@@ -194,21 +185,21 @@
 				<groupId>io.dropwizard</groupId>
 				<artifactId>dropwizard-metrics</artifactId>
 				<version>${dropwizard.version}</version>
-			</dependency>
+			</dependency> 
+            <dependency>
+                <groupId>io.dropwizard.metrics</groupId>
+                <artifactId>metrics-healthchecks</artifactId>
+                <version>${metrics.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.dropwizard.metrics</groupId>
+                <artifactId>metrics-annotation</artifactId>
+                <version>${metrics.version}</version>
+            </dependency>
 			<dependency>
 				<groupId>javax.ws.rs</groupId>
 				<artifactId>javax.ws.rs-api</artifactId>
 				<version>2.0.1</version>
-			</dependency>
-			<dependency>
-				<groupId>commons-beanutils</groupId>
-				<artifactId>commons-beanutils</artifactId>
-				<version>1.9.3</version>
-			</dependency>
-			<dependency>
-				<groupId>org.reflections</groupId>
-				<artifactId>reflections</artifactId>
-				<version>0.9.10</version>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
@@ -357,7 +348,7 @@
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>1.2.1</version>
+				<version>1.2.3</version>
 			</dependency>
 			<dependency>
 				<groupId>org.postgresql</groupId>
@@ -505,6 +496,16 @@
 				<groupId>com.sun.activation</groupId>
 				<artifactId>javax.activation</artifactId>
 				<version>1.2.0</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-beanutils</groupId>
+				<artifactId>commons-beanutils</artifactId>
+				<version>1.9.3</version>
+			</dependency>
+			<dependency>
+				<groupId>org.reflections</groupId>
+				<artifactId>reflections</artifactId>
+				<version>0.9.11</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
