--- a/model/pom.xml
+++ b/model/pom.xml
@@ -89,7 +89,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.sun.activation</groupId>
-			<artifactId>javax.activation</artifactId> 
+			<artifactId>javax.activation</artifactId>
 		</dependency>
 
 
@@ -241,20 +241,29 @@
 						<database>
 							<name>org.jooq.util.postgres.PostgresDatabase</name>
 							<includes>.*</includes>
-							<excludes> validate_json_schema | _validate_json_schema_type | draftV4Schema
+							<excludes> validate_json_schema | _validate_json_schema_type |
+								draftV4Schema
 							</excludes>
 							<inputSchema>ruleform</inputSchema>
 							<recordVersionFields>version</recordVersionFields>
 							<forcedTypes>
-                                <forcedType>
-                                    <userType>com.fasterxml.jackson.databind.JsonNode</userType>
-                                    <binding>com.chiralbehaviors.CoRE.postgres.PostgresJSONJacksonJsonNodeBinding</binding>
-                                    <expression>.*json_value.*</expression>
-                                </forcedType>
 								<forcedType>
-                                    <userType>com.fasterxml.jackson.databind.JsonNode</userType>
-                                    <binding>com.chiralbehaviors.CoRE.postgres.PostgresJSONJacksonJsonNodeBinding</binding>
-									<expression>.*JSON.*</expression>
+									<userType>com.fasterxml.jackson.databind.JsonNode</userType>
+									<binding>com.chiralbehaviors.CoRE.postgres.PostgresJSONJacksonJsonNodeBinding</binding>
+									<expression>.*JSON_VALUE.*</expression>
+									<types>.*</types>
+								</forcedType>
+								<forcedType>
+									<userType>com.fasterxml.jackson.databind.JsonNode</userType>
+									<binding>com.chiralbehaviors.CoRE.postgres.PostgresJSONJacksonJsonNodeBinding</binding>
+									<expression>.*schema.*</expression>
+									<types>.*</types>
+								</forcedType>
+								<forcedType>
+									<userType>com.fasterxml.jackson.databind.JsonNode</userType>
+									<binding>com.chiralbehaviors.CoRE.postgres.PostgresJSONJacksonJsonNodeBinding</binding>
+									<expression>.*properties.*</expression>
+									<types>.*</types>
 								</forcedType>
 							</forcedTypes>
 						</database>
