clone phantasm plugin in prep for next phase of json workspace dsl

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
 		<module>dsl</module>
 		<module>loader-plugin-test</module>
 		<module>phantasm-plugin</module>
+        <module>phantasm2-plugin</module>
 		<module>phantasm-at-rest</module>
 		<module>thing-ontology</module>
 		<module>workspace-plugin</module>
@@ -511,6 +512,11 @@
 				<groupId>org.reflections</groupId>
 				<artifactId>reflections</artifactId>
 				<version>0.9.11</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jsonschema2pojo</groupId>
+				<artifactId>jsonschema2pojo-core</artifactId>
+				<version>0.5.1</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
