--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -121,7 +121,7 @@
 						</goals>
 						<configuration>
 							<generator>
-								<resource>${basedir}/src/main/resources/kernel.3.wsp</resource>
+								<resource>${basedir}/src/main/resources/kernel.3.json</resource>
 								<outputDirectory>${project.build.directory}/generated-sources/phantasm</outputDirectory>
 								<packageName>com.chiralbehaviors.CoRE.kernel.phantasm</packageName>
 							</generator>
